<resources>
    <string name="app_name">CSC2990-Wordy</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_5_letter_word">Enter 5-letter word</string>
    <string name="new_word">New Word:</string>
    <string name="wordy">WORDY</string>
    <string name="guess_the_word">Guess the word!</string>
    <string name="enter_a_5_letter_word">Enter a 5-letter word</string>
    <string name="submit">Submit</string>
    <string name="restart">Restart</string>
    <string name="clear">Clear</string>
    <string name="add_word">Add Word</string>
    <string name="clear_database">Clear Database</string>
</resources>